--- a/vagrant/restaurant_menu/templates/editMenuItem.html
+++ b/vagrant/restaurant_menu/templates/editMenuItem.html
@@ -9,10 +9,11 @@
 <form action="{{url_for('editMenuItem', restaurant_id=params['restaurant_id'], menu_id=params['menu_id'])}}" method="POST">
     <h2>Restaurant {{params['name']}}:</h2>
     <p>Edit Menu <i>{{params['menu_name']}}</i>:</p>
-    <input type="text" name="name" size="30" placeholder="{{params['name']}}">
+    <input type="text" name="name" size="30" placeholder="{{params['menu_name']}}">
     <input type="submit" value="Create">
 </form>
 
+<br>
 <a href="{{url_for('restaurantMenu', restaurant_id=params['restaurant_id'])}}"> cancel </a>
 
 </body>
