--- a/vagrant/restaurant_menu/templates/newMenuItem.html
+++ b/vagrant/restaurant_menu/templates/newMenuItem.html
@@ -12,6 +12,9 @@
     <input type="submit" value="Create">
 </form>
 
+<br>
+<a href = "{{ url_for('restaurantMenu', restaurant_id=restaurant_id)}}"> cancel </a>
+
 
 </body>
 </html>
