--- a/vagrant/restaurant_menu/templates/header.html
+++ b/vagrant/restaurant_menu/templates/header.html
@@ -5,7 +5,7 @@
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-					<p>Login Link will go Here </p>
-		
+					<a href="{{url_for('showLogin')}}">Login</a> | <a href="{{url_for('gdisconnect')}}">Logout</a>
+
 	</div>
 </div>
