--- a/vagrant/restaurant_menu/templates/header.html
+++ b/vagrant/restaurant_menu/templates/header.html
@@ -1,11 +1,16 @@
 <div class="row top-menu">
-	<div class="col-md-6">
-		<a href="{{url_for('showRestaurants')}}">
-			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show All Restaurants
-		</a>
-	</div>
-	<div class="col-md-6 text-right">
-					<a href="{{url_for('showLogin')}}">Login</a> | <a href="{{url_for('gdisconnect')}}">Logout</a>
+    <div class="col-md-6">
+        <a href="{{url_for('showRestaurants')}}">
+            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show All Restaurants
+        </a>
+    </div>
 
-	</div>
+    <div class="col-md-6 text-right">
+        {% if 'username' not in session %}
+            <a href="{{url_for('showLogin')}}">Login</a>
+        {% else %}
+            <a href="{{url_for('disconnect')}}">Logout</a>
+        {% endif %}
+
+    </div>
 </div>
