--- a/vagrant/restaurant_menu/templates/login.html
+++ b/vagrant/restaurant_menu/templates/login.html
@@ -52,5 +52,71 @@
 <!--END GOOGLE PLUS SIGN IN BUTTON -->
 
 
+<!--FACEBOOK SIGN IN -->
+<script>
+var access_token = '';
+// see: https://developers.facebook.com/quickstarts/1412237542223627/?platform=web
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1412237542223627',
+      autoLogAppEvents : true,
+      status           : true,
+      xfbml      : true,
+      version    : 'v2.9'
+    });
+    FB.AppEvents.logPageView();
+
+// why the hell is this the only way of having the access token available? -.-
+    FB.Event.subscribe('auth.login', function(response) {
+        access_token = response.authResponse.accessToken;
+    });
+
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+  // Here we run a very simple test of the Graph API after login is
+  // successful.  See statusChangeCallback() for when this call is made.
+  function sendTokenToServer() {
+    console.log('Welcome!  Fetching your information.... ');
+FB.login(function(response){
+    FB.api('/me', function(response) {
+      console.log('Successful login for: ' + response.name);
+     $.ajax({
+      type: 'POST',
+      url: '/fbconnect?state={{STATE}}',
+      processData: false,
+      data: access_token,
+      contentType: 'application/octet-stream; charset=utf-8',
+      success: function(result) {
+        // Handle or verify the server response if necessary.
+        if (result) {
+          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...');
+         setTimeout(function() {
+          window.location.href = "/restaurant";
+         }, 4000);
+
+      } else {
+        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+         }
+      }
+  });
+    });
+}, {scope: 'email, public_profile'}); //FB.login
+};
+</script>
+
+<fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
+    <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
+</fb:login-button>
+
+<!--END FACEBOOK SIGN IN -->
+
+
 </body>
 </html>
